@@ -2,7 +2,9 @@ AUX remove-root-check.patch 1145 RMD160 b54d0a68015cb2978d4f32afa19ee3700076c78f
 DIST libguestfs-1.7.18-x86_64.tar.gz 62332840 RMD160 202ac5883d1453d6225b76029290ccebd44c7e84 SHA1 661786c088fad8d2354e8121a2fafb1d598587fc SHA256 07c4f0b4b50df7407327333d9e9b09c310265d056868531c69659659a9f5218d
 DIST libguestfs-1.7.18.tar.gz 4607818 RMD160 751017131a3766d535652954c7c47d871e100807 SHA1 c9531e273485355fd8b0f560df21c5358065c739 SHA256 e8dc7b8b7a1f50825e683ef97cb06639d12f7c93938190283fdd69f89554471f
 DIST libguestfs-1.7.19.tar.gz 4603258 RMD160 505760b62e881523015aa782d563ced6f5c0d10d SHA1 97863e84d16110d23eebaa839aaeeb0b45fa464f SHA256 f4b3a542473ebcb4160554f73886e462bd977e4bc928dcb4cae6fe88e33b0bbe
+DIST libguestfs-1.7.23.tar.gz 4610960 RMD160 85f295862f661adfb1c77ee36900cc78e792268a SHA1 b2aa6275ca71e9e8e6d838a697a485c3a3b3869b SHA256 cd4015e57d6111cfb288b9c3cf84570ee91286f94e63c5aae957d4be9d0b5837
 EBUILD libguestfs-1.7.18.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
 EBUILD libguestfs-1.7.19.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
-MISC ChangeLog 2981 RMD160 7c887a3509089991a7d8c1d622d5b98f5d8822df SHA1 b8fc86f8ed497ae2777276703fb8ee9d419a17d9 SHA256 ca8da37b98ae697afda364d909f3ee9c5a4911102f4e043926ebc4895e57b29f
+EBUILD libguestfs-1.7.23.ebuild 3717 RMD160 c32ac0e803ef148ac21de5935efeb6454ac1013e SHA1 9914eb7c567aa0d7d0d0c8e3b6bdd470a3da163c SHA256 fa9249343e0d925cc01ba83a5fd1135e2590b690aa01b47085706399b109a0dd
+MISC ChangeLog 3083 RMD160 7e9502cfb1ca21f0d487123306b6602830aef3c6 SHA1 61cc66573b4ba1f551b53b6303bf5258e9154a17 SHA256 a905df6e0e1666b7c79081e4acdcf541b082d2e3cd7620f96cf8d57696d79eca
 MISC metadata.xml 501 RMD160 1d5e04d82191f782fd3108906ced30b87b5a70f5 SHA1 e946ac96e0b411d3d0155cb206c39038b6f28a2a SHA256 4771383569b2f1fae061e04c0147824a9f3be6bb538d35e6b4e93bd0fe26cf2a
